@@ -111,8 +111,7 @@ $l['meetingTheseCriteria']='die voldoen aan de volgende criteria';
 $l['pleaseSelectOne']='Maakt u a.u.b. een keuze';
 $l['vacationStart']='Eerste dag van dit bericht';
 $l['vacationEnd']='Laatste dag van dit bericht';
-
 $l['activateFilter']='Activeer deze filter';
 $l['active']='Actief';
-
 $l['setRead']='Markeer bericht als gelezen';
+$l['sieveWarning']="Als uw IMAP server sieve ondersteunt, dan word aanbevolen om de sieve filters te gebruiken. Probeer het tablad 'Sieve filters' eerst aub.";
